# piranha

./: .gitignore  CMakeLists.txt  README.md
demos/: main.cpp  reference_language_rules.cpp  reference_language_rules.h  utilities.cpp  utilities.h
demos/piranha/: demo.mr  hello_world.mr  member_function_demo.mr  number_adder.mr  performance_test.mr  test.mr  vector_test.mr
demos/piranha/standard-library/: console.mr  conversions.mr  literals.mr  operators.mr  probes.mr  standard_library.mr
docs/handbook/: handbook.md
docs/v2_design/: new_design.md
flex-bison/: scanner.l  specification.y
include/: add_operation_output.h  build_settings.h  channel_type.h  compilation_error.h  compiler.h  console_input_node.h  console_output_node.h  constructed_float_node.h  constructed_float_node_output.h  constructed_string_node.h  constructed_string_node_output.h  custom_node.h  default_literal_node.h  error_list.h  exceptions.h  float_cast_node.h  float_conversions.h  float_literal_node.h  float_node_output.h  fundamental_output.h  fundamental_types.h  generator.h  ir_attribute.h  ir_attribute_definition.h  ir_attribute_definition_list.h  ir_attribute_list.h  ir_binary_operator.h  ir_compilation_error.h  ir_compilation_unit.h  ir_context_tree.h  ir_error_list.h  ir_generic_value.h  ir_import_statement.h  ir_input_connection.h  ir_literal_node.h  ir_node.h  ir_node_definition.h  ir_parser_structure.h  ir_structure_list.h  ir_token_info.h  (+59 more)
project/: piranha.sln
project/piranha/: piranha.vcxproj  piranha.vcxproj.filters
project/piranha_reference_compiler/: asm.txt  piranha_reference_compiler.vcxproj  piranha_reference_compiler.vcxproj.filters
project/piranha_test/: pch.h  piranha_test.vcxproj  piranha_test.vcxproj.filters
scripts/: compile_flex_bison.bat  increment_build_version.py  package.py  package_piranha.py
src/: assembly.cpp  channel_node.cpp  channel_type.cpp  compilation_error.cpp  compiler.cpp  constructed_float_node.cpp  constructed_float_node_output.cpp  constructed_string_node.cpp  constructed_string_node_output.cpp  custom_node.cpp  error_list.cpp  float_cast_node.cpp  float_conversions.cpp  float_literal_node.cpp  float_node_output.cpp  fundamental_types.cpp  generator.cpp  int_conversions.cpp  ir_attribute.cpp  ir_attribute_definition.cpp  ir_attribute_definition_list.cpp  ir_attribute_list.cpp  ir_binary_operator.cpp  ir_compilation_error.cpp  ir_compilation_unit.cpp  ir_context_tree.cpp  ir_error_list.cpp  ir_generator.cpp  ir_generic_value.cpp  ir_import_statement.cpp  ir_input_connection.cpp  ir_node.cpp  ir_node_definition.cpp  ir_parser_structure.cpp  ir_unary_operator.cpp  ir_value.cpp  language_rules.cpp  literal_node_output.cpp  memory_tracker.cpp  no_op_node.cpp  (+34 more)
test/: compilation_tests.cpp  general_tests.cpp  operator_tests.cpp  optimization_tests.cpp  runtime_tests.cpp  sdl_stress_tests.cpp  sdl_tests.cpp  test_generator.cpp  test_generator.h  test_rules.cpp  test_rules.h  utilities.cpp  utilities.h
test/sdl/: attribute_definition_test.mr  bad_type_enforcement.mr  duplicate_node_definition.mr  global_reference_test.mr  infinite_loop_test_1.mr  infinite_loop_test_2.mr  infinite_loop_test_3.mr  infinite_loop_test_4.mr  input_connection_test.mr  operation_definition.mr  reference_resolution.mr  single_node_builtin.mr  single_node_data_access.mr  single_node_definition.mr
test/sdl/construction-tests/: demo.mr  nested_conversions.1.mr  nested_conversions.mr  simple_float.mr  test.mr
test/sdl/full-error-testing/: test_case_1.mr  test_case_2.mr  test_case_3.mr
test/sdl/general-tests/: fd  general_syntax_test_1.mr  general_syntax_test_10.mr  general_syntax_test_11.mr  general_syntax_test_12.mr  general_syntax_test_13.mr  general_syntax_test_13_min.mr  general_syntax_test_14.mr  general_syntax_test_15.mr  general_syntax_test_16.mr  general_syntax_test_17.mr  general_syntax_test_18.mr  general_syntax_test_19.mr  general_syntax_test_2.mr  general_syntax_test_20.mr  general_syntax_test_21.mr  general_syntax_test_21a.mr  general_syntax_test_21b.mr  general_syntax_test_22.mr  general_syntax_test_23.mr  general_syntax_test_24a.mr  general_syntax_test_24b.mr  general_syntax_test_25.mr  general_syntax_test_26.mr  general_syntax_test_27.mr  general_syntax_test_28.mr  general_syntax_test_29.mr  general_syntax_test_3.mr  general_syntax_test_30.mr  general_syntax_test_31.mr  general_syntax_test_32.mr  general_syntax_test_33.mr  general_syntax_test_34.mr  general_syntax_test_35.mr  general_syntax_test_36.mr  general_syntax_test_37.mr  general_syntax_test_4.mr  general_syntax_test_5.mr  general_syntax_test_6.mr  general_syntax_test_7.mr  (+2 more)
test/sdl/manta_lib/lib/: atomic_types.mr  color.mr
test/sdl/operator-tests/: operator_sanity_check.mr  operator_test_1.mr  operator_test_2.mr  operator_test_3.mr  operator_test_4.mr  operator_test_5.mr  operator_test_6.mr  operator_test_7.mr  operator_test_8.mr  operator_test_9.mr  operators.mr
test/sdl/optimization-tests/: optimization_test_1.mr  optimization_test_2.mr  optimization_test_3.mr  optimization_test_4.mr  optimization_test_5.mr  optimization_test_6.mr  optimization_test_7.mr
test/sdl/resolution-tests/: resolution_errors_1.mr  resolution_errors_2.mr
test/sdl/runtime-tests/: runtime_error_test.mr
test/sdl/sample_lib/: test_lib.mr
test/sdl/stress-testing/: deep_error.mr  deep_error_isolated.mr  node_argument_stress_test_1.mr  stress_test_1.mr
test/sdl/visibility-tests/: color.mr  some_library.mr  visibility_test_2.mr
